# url-shortner

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: dependencies.py  limiter.py  main.py  utils.py
app/api/models/: __init__.py  emails.py  otp.py  slug.py  url.py  url_stat.py  user.py
app/api/repo/: analytics_repo.py  analytics_service.py  base.py  email_repo.py  otp_repo.py  redis_repo.py  slug_repo.py  unit_of_work.py  url_repo.py  user_repo.py
app/api/routers/: analytics.py  auth.py  router.py  slug.py  url.py
app/api/schemas/: analytics.py  auth.py  emails.py  response.py  slug.py  url.py  user.py
app/api/services/: analytics_service.py  auth_service.py  email_service.py  otp_service.py  slug_service.py  url_service.py  user_service.py
app/core/: config.py  exception_handlers.py  exceptions.py  security.py
app/database/: session.py
app/task/: __init__.py  celery_app.py  celery_schedule.py  celery_task.py  celeryconfig.py  db.py
migrations/: env.py
migrations/versions/: 040d5f187e33_add_uuid7_extension.py  112f77a4f63a_create_url_stats_table_add_slug_id_.py  61b1abacfe95_initial_migartions.py  67f6bba9d03e_add_status_column_to_otp_table_and_.py  6cecc74c5953_add_status_to_url_table_and_is_.py  bafceb8dd35d_create_url_stats_table_add_slug_id_.py  efc1af62e20b_add_type_and_delete_at_columns_to_users_.py  f6f943d690cb_create_emails_table_add_five_days_.py
tests/: conftest.py  test_analytics.py  test_auth.py  test_slug.py  test_url.py
