[project]
name = "url-shortner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asgi-lifespan>=2.1.0",
    "asyncpg>=0.31.0",
    "authlib>=1.7.2",
    "celery>=5.6.3",
    "coolname>=5.0.0",
    "fastapi[all]>=0.136.1",
    "flower>=2.0.1",
    "gevent>=26.5.0",
    "honcho>=2.0.0",
    "psycopg2>=2.9.12",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-jose>=3.5.0",
    "redis>=7.4.0",
    "resend>=2.30.1",
    "sentry-sdk>=2.60.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
]
